@@ -1,5 +1,9 @@
 2025-02-08  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.3.3-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.3.3-alpha02: Toyota Matrix';git push
+	git tag -a 5.3.3-alpha02 -m 'fxm';git push --tags
+
 	* NCO 5.3.3-alpha01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.3-alpha01: Arcane';git push
 	git tag -a 5.3.3-alpha01 -m 'Functionally identical to 5.3.2; ncrename WARN on netCDF4';git push --tags
